discussion/kv_engine/157226/157226_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47143: Add Rate Limited error codes

The following error codes was added to the system:

    RateLimitedNetworkIngress = 0x30,
    RateLimitedNetworkEgress = 0x31,
    RateLimitedMaxConnections = 0x32,
    RateLimitedMaxCommands = 0x33,

A new attribute is added to the error map (named "rate-limit")
to allow clients to "automatically" recognize new rate limits
when they are added to the system and perform "magic" related
to them (like trigger a callback for the user)

Given that not all clients support new attributes, the version
of the clustermap was bumped to two and in the spec for version
two clients _MUST_ ignore unknown attributes. The rest of the
layout is identical to version 1.

To avoid having to maintain two different formats on the server
we generate version 1 out of version 2 during startup. Clients
requesting version 2 must accept the server returning version 1.

Change-Id: I1fafa86dd8b85fc2f5474321637aaaf237ce1069

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-09 14:35:34.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-09 14:38:36.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37559/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37559/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32035/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32035/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12010/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12010/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12514/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12514/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/45/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/45/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12169/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12169/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11093/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11093/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20061/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10435/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/error_map_manager_test.cc:38:17: error: use of undeclared identifier "nlohmann" [clang-diagnostic-error]
    auto json = nlohmann::json::parse(v1);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/error_map_manager_test.cc:49:17: error: use of undeclared identifier "nlohmann" [clang-diagnostic-error]
    auto json = nlohmann::json::parse(v2);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/error_map_manager_test.cc:61:17: error: use of undeclared identifier "nlohmann" [clang-diagnostic-error]
    auto json = nlohmann::json::parse(v3);
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10435/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/error_map_manager_test.cc:38:17:
error: use of undeclared identifier "nlohmann" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10435/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9074/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
